--- a/frontPage.css
+++ b/frontPage.css
@@ -19,7 +19,7 @@ html{
 	p
 	{
 		font-size: 20px;
-		font-family: cursive, sans-serif;
+		font-family: sans-serif;
 		font-weight: bold;
 		color: white;
 		position: absolute;
